Fix h1 align and width in mobile screen of results and button continue

--- a/results-summary-component-main/styles/style.css
+++ b/results-summary-component-main/styles/style.css
@@ -98,8 +98,6 @@ main .your-result p {
 main .summary {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 3rem;
   width: 100%;
 }
@@ -118,7 +116,8 @@ main .summary ul {
 main .summary ul li {
   display: flex;
   justify-content: space-between;
-  width: 300px;
+  width: 100%;
+  min-width: 300px;
   padding: 1rem;
   border-radius: 0.5rem;
   margin: 1rem 0;
@@ -197,7 +196,8 @@ main .summary button {
   font-weight: 500;
   transition: all 0.3s ease-in;
   margin-top: 1rem;
-  width: 300px;
+  width: 100%;
+  min-width: 300px;
 }
 
 main .summary button:hover {
